# charex

./: .gitignore  Makefile  Pipfile  README.rst  precommit.py  pyproject.toml  rebuild_data.py  requirements.txt  setup.cfg
charex/: __init__.py  __main__.py  charex.py  charsets.py  cmds.py  db.py  denormal.py  escape.py  gui.py  http.py  normal.py  shell.py  util.py
charex/data/: help_cd.txt  help_ce.txt  help_cl.txt  help_count.txt  help_dn.txt  help_dt.txt  help_el.txt  help_es.txt  help_rd.txt  meta.json  path_map.json  prop_map.json  props.json  quote.html  result.html  rev_casefold.json  rev_nfc.json  rev_nfd.json  rev_nfkc.json  rev_nfkd.json  sources.json
charex/static/styles/: styles.css
docs/source/: api.rst  conf.py  forms.rst  index.rst  requirements.rst  unicode.rst
src/charex/: charex.py  cmds.py  db.py  escape.py  gui.py  model.py  normal.py  shell.py  util.py
src/charex/data/: path_map.json  prop_map.json  sources.json  versions.json
src/util/: rebuilder.py
tests/: test_charex.py  test_charset.py  test_db.py  test_denormal.py  test_escape.py  test_main.py  test_normal.py  test_shell.py
tests/data/: charset_mode_0a.txt  charset_mode_41.txt  charset_mode_e9.txt  charset_mode_r.txt  charsetlist.txt  charsetlist_d.txt  deserialize_valid.json  details_mode_A.txt  dt_A.txt  dt_A_v15_0.txt  el_d.txt  enumeratedversions.html  fl_d.txt  ns.txt  sv.txt  sv_v15_0.txt  test_path_map.json  up.txt  up_d.txt  up_d_v15_1.txt  up_v15_1.txt  vn.txt
tests/test_util/: test_rebuilder.py
tools/: build_denormal_maps.py  rebuild.ini  rebuild_data.py
(+6 files in other folders)
